--- a/public/global.css
+++ b/public/global.css
@@ -3,6 +3,15 @@
     font-family: 'Space Mono', monospace;
 }
 
+button{
+    border: none;
+    padding: 0;
+    margin: 0;
+    background: none;
+    box-shadow: none;
+    cursor: pointer;
+}
+
 h1{
     font-size: 26px;
 }
@@ -37,7 +46,6 @@ main{
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    align-items: center;
 	margin-inline: 24px;
 }
 
@@ -64,7 +72,7 @@ main{
 	padding-inline: 24px;
 }
 
-.top-row{
+.header{
 	display: flex;
     justify-content: space-between;
     align-items: center;
@@ -86,36 +94,34 @@ img.search-icon{
     height: 20px;
 }
 
-button{
+button.search{
     border-radius: 0.625rem;
     background: #0079FF;
     color: #FFF;
-    font-weight: 400;
     display: flex;
+    font-weight: 400;
     align-items: center;
     justify-content: center;
     padding-inline: 1rem;
     padding-block: 0.781rem;
-    box-shadow: none;
-    border: none;
-	cursor: pointer;
+    width: fit-content;
 }
 
-.user-top-row{
+.card-header{
     display: flex;
     gap: 1rem;
 }
 
-.user-heading{
+.header-info{
     display: flex;
     flex-direction: column;
 }
 
-.user-heading p{
+.header-info p{
     margin: 0;
 }
 
-.user-heading a{
+.header-info a{
     color: #0079FF;
 }
 
@@ -176,23 +182,29 @@ button{
 
 /* dark theme */
 @media (prefers-color-scheme: dark){
-    body.dark{
+    body{
         background: #141D2F;
     }
-    .item.dark{
-        background: #1E2A47;
-    }
-    .item.dark p b a{
+    h1, h6, p, b, a, button{
         color: #FFF;
     }
-    .item.dark .user-github-counts{
+    .search, .card{
+        background: #1E2A47;
+    }
+
+    .card .user-github-counts{
         background: #141D2F;
     }
-    .item.dark input{
+    input{
         background: #1E2A47;
         color: #FFF;
     }
-    .item.dark input::placeholder{
+
+    input::placeholder{
+        color: #FFF;
+    }
+
+    .socials a{
         color: #FFF;
     }
 }
