--- a/public/global.css
+++ b/public/global.css
@@ -26,6 +26,10 @@ h6{
     font-size: 13px;
 }
 
+a:hover{
+    text-decoration-line: underline;
+}
+
 p, a, input, input::placeholder{
     font-size: 13px;
     margin: 0;
@@ -177,6 +181,7 @@ button.color-scheme {
     flex-direction: column;
     gap: 1rem;
     align-self: flex-start;
+    color: #697C9A;
 }
 
 .socials a, p{
@@ -184,10 +189,13 @@ button.color-scheme {
     align-items: center;
     gap: 1.25rem;
     font-size: 0.813rem;
-    color: #697C9A;
 	text-decoration: none;
 	margin: 0;
 	padding: 0;
+}
+
+.socials a:hover{
+    text-decoration-line: underline;
 }
 
 .not-available{
@@ -257,10 +265,36 @@ button.color-scheme {
 
 /* MQ */
 @media (min-width: 573px) {
-     /* main{
-        min-width: 573px;
-     } */
+    /* .socials{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        align-self: flex-start;
+    } */
+    .socials{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 1rem;
+        justify-content: space-between;
+        width: 100%;
+    }
 }
 
 /* X-Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) { ... }
+@media (min-width: 1200px) { 
+    .header-info {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        align-items: start;
+        width: 100%;
+    }
+
+    .header-info span{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .header-info p{
+        justify-content: end;
+    }
+ }
