--- a/public/global.css
+++ b/public/global.css
@@ -13,7 +13,7 @@ button{
 }
 
 h1{
-    font-size: 26px;
+    font-size: 1.625rem;
     color: #2B3442;
 }
 
@@ -23,7 +23,7 @@ b{
 }
 
 h6{
-    font-size: 13px;
+    font-size: 0.8125rem;
 }
 
 a:hover{
@@ -31,11 +31,11 @@ a:hover{
 }
 
 p, a, input, input::placeholder{
-    font-size: 13px;
+    font-size: 0.8125rem;
     margin: 0;
     font-weight: 400;
 	text-decoration: none;
-	line-height: 25px;
+	line-height: 1.5625rem;
     color: #697C9A;
 }
 
@@ -54,8 +54,7 @@ body{
 main{
     display: flex;
     flex-direction: column;
-    min-width: 327px;
-    max-width: 730px;
+    width: 20.4375rem;
     gap: 1rem;
 	margin-inline: 24px;
 }
