--- a/public/global.css
+++ b/public/global.css
@@ -64,8 +64,8 @@ main{
 	display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-inline: .5rem;
-    padding-block: 0.406rem;
+    padding-inline: 1rem;
+    padding-block: .5rem;
     gap: .5rem;
     border-radius: 0.9375rem;
     box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.20);
@@ -74,8 +74,8 @@ main{
 .card{
 	border-radius: 15px;
     box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.20);
-    display: flex;
-	flex-direction: column;
+   display: grid;
+   grid-template-columns: 1fr;
     gap: 1rem;
     padding-block: 2rem;
 	padding-inline: 1.5rem;
@@ -130,12 +130,25 @@ button.color-scheme {
     color: #2b3442;
   }
 
+ img.circle{
+    width: 4.375rem;
+    height:4.375rem;
+    border-radius: 4.375rem;
+	background: lightgray 50% / cover no-repeat;
+}
+
+
 .card-header{
     display: flex;
     gap: 1rem;
 }
 
 .header-info{
+    display: flex;
+    gap: 1rem;
+}
+
+.header-text{
     display: flex;
     flex-direction: column;
 }
@@ -148,13 +161,6 @@ button.color-scheme {
     color: #0079FF;
 }
 
-.circle{
-    width: 4.375rem;
-    height:4.375rem;
-    border-radius: 4.375rem;
-	background: lightgray 50% / cover no-repeat;
-}
-
 .header-info span{
     display: flex;
     flex-direction: column;
@@ -165,15 +171,15 @@ button.color-scheme {
     border-radius: 0.625rem;
     background: #F6F8FF;
     align-items: center;
-    justify-content: space-around;
-    padding: 1rem;
+    justify-content: space-between;
+    padding-inline: 2rem;
+    padding-block: 1rem;
 }
 
 .github-count{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    align-items: start;
 }
 
 .github-count p{
@@ -279,37 +285,66 @@ a.not-available:hover{
 }
 
 /* MQ */
-/* @media (min-width: 573px) {
-    .socials{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 1rem;
-        justify-content: space-between;
-        width: 100%;
-    }
-} */
-
-@media (min-width: 768px) {
+@media (min-width: 600px) {
     main{
         width: 35.8125rem;
     }
+
+    .card{
+        padding: 2.5rem;
+        font-size: 0.9375rem;
+    }
+
+    .header-info b{
+        font-size: 1.625rem;
+    }
+
+    .header-info p, a{
+        font-size: 1rem;
+    }
+
+    .github-count p{
+        font-size: 13px;
+    }
+
     .socials{
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 1rem;
+        gap: 2rem;
         justify-content: space-between;
         width: 100%;
     }
+
+    .socials a, p{
+        font-size: 0.9375rem;
+    }
+
+    img.circle{
+        width: 7.3125rem;
+        height:7.3125rem;
+        border-radius: 4.375rem;
+        background: lightgray 50% / cover no-repeat;
+    }
 }
+
 @media (min-width: 1200px) { 
     main{
         width: 45.625rem;
     }
+    .card{
+        padding: 48px;
+    }
+
     .header-info {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: auto 1fr;
+        gap: 2rem;
         align-items: start;
         width: 100%;
+    }
+
+    .header-text{
+        position: relative;
     }
 
     .header-info span{
@@ -318,6 +353,29 @@ a.not-available:hover{
     }
 
     .header-info p{
-        justify-content: end;
+        position: absolute;
+        right: 0;
+       top: .5rem;
+    }
+
+    input, input::placeholder{
+        font-size: 1rem;
+    }
+
+    p.bio{
+        padding-inline-start: 9rem;
+    }
+
+    .user-github-counts{
+       margin-inline-start: 9rem;
+    }
+
+    .github-count{
+        align-items: start;
+    }
+
+    .socials{
+        margin-inline-start: 9rem;
+        width: unset;
     }
  }
