--- a/public/global.css
+++ b/public/global.css
@@ -49,6 +49,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height:90vh;
 }
 
 main{
@@ -56,7 +57,6 @@ main{
     flex-direction: column;
     width: 20.4375rem;
     gap: 1rem;
-	margin-inline: 24px;
 }
 
 .search{
